some of the changes are made

--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -94,7 +94,7 @@
             <div class="imghvr">
               <img class="card-img-top cast-img" id="{{details[0]}}" height="360" width="240" alt="{{name}} - profile" src="{{details[2]}}">
               <figcaption class="fig">
-                <button class="card-btn btn btn-danger"> Know More </button>
+                <button class="card-btn btn btn-success"> Know More </button>
               </figcaption>
             </div>
             <div class="card-body">
@@ -106,7 +106,7 @@
     </div>
 {% endif %}
 
-  <center>
+  <!-- <center>
     {% if reviews %}
     <h2 style="color:white">USER REVIEWS</h2>
      <div class="col-md-12" style="margin: 0 auto; margin-top:25px;">
@@ -141,7 +141,7 @@
       <h1 style="color:white"> This movie is not released yet. Stay tuned! </h1>
     </div>
     {% endif %}
-  </center>
+  </center> -->
 
       {% if movie_cards|length > 1 %}
 
@@ -156,7 +156,7 @@
           <div class="imghvr">
             <img class="card-img-top" height="360" width="240" alt="{{title}} - poster" src={{poster}}>
             <figcaption class="fig">
-              <button class="card-btn btn btn-danger"> Click Me </button>
+              <button class="card-btn btn btn-info"> Click Me </button>
             </figcaption>
            </div>
           <div class="card-body">
