--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Movies Recommendation System</title>
+  <title>Movies Recommendation</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +27,7 @@
 <body id="content" style="font-family: 'Noto Sans JP', sans-serif;">
 
 	<div class="ml-container" style="display: block;">
-		<a href="https://github.com/kishan0725/AJAX-Movie-Recommendation-System-with-Sentiment-Analysis" target="_blank" class="github-corner" title="View source on GitHub">
+		<a href="https://github.com/nishkarshmjain/AJAX-Movie-Recommendation-System-with-Sentiment-Analysis-master" target="_blank" class="github-corner" title="View source on GitHub">
 		      <svg data-toggle="tooltip"
 		      data-placement="left" width="80" height="80" viewBox="0 0 250 250"
 			style="fill:#e50914; color:#fff; position: fixed;z-index:100; top: 0; border: 0; right: 0;" aria-hidden="true">
@@ -40,14 +40,14 @@
 			  fill="currentColor" class="octo-body"></path>
 		      </svg>
 		    </a>
-    <center><h1 style=""> Movie Recommendation System</h1></center>
+    <center><h1> Movie Recommendation System</h1></center>
     <div class="form-group shadow-textarea" style="margin-top: 30px;text-align: center;color: white;">
         <input type="text" name="movie" class="movie form-control" id="autoComplete" autocomplete="off" placeholder="Enter the Movie Name" style="background-color: #ffffff;border-color:#ffffff;width: 60%;color: #181818" required="required" />
         <br>
     </div>
 
     <div class="form-group" style="text-align: center;">
-      <button class="btn btn-primary btn-block movie-button" style="background-color: #e50914;text-align: center;border-color: #e50914;width:120px;" disabled="true" >Enter</button><br><br>
+      <button class="btn btn-primary btn-block movie-button" style="background-color: #e50914;text-align: center;border-color: #e50914;width:120px;" >Enter</button><br><br>
     </div>
 	</div>
 
@@ -55,8 +55,7 @@
   </div>
   
   <div class="fail">
-    <center><h3>Sorry! The movie you requested is not in our database. 
-    Please check the spelling or try with other movies!</h3></center>
+    <center><h3>Sorry! The movie you requested is not in our database.</h3></center>
   </div>
 
 	<div class="results">
@@ -65,7 +64,7 @@
     </center>
 	</div>
 	
-	<!--div class="footer" style="">Made with<span style="font-size:150%;color:red;"> &hearts; </span>by Kishan</div-->
+	<div class="footer">Made with<span style="font-size:150%;color:red;"> &hearts; </span>by Nishkarsh</div
 	
 	<script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/js/autoComplete.min.js"></script>
   <script type="text/javascript" src="{{url_for('static', filename='autocomplete.js')}}"></script>
